<resources>
    <string name="app_name">Stay_Light</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_password_unmatched">please confirm your password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>

    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="where_s_your_place_located">Where’s your place located?</string>
    <string name="house_holding_no">House/Holding No.</string>
    <string name="road_no">Road No</string>
    <string name="ex_dhaka_chittagong">ex:Dhaka,Chittagong</string>
    <string name="apartment_no">Apartment No.</string>
    <string name="house_no">House No</string>
    <string name="city">City</string>
    <string name="apt_no">Apt. No</string>
    <string name="zip_code">Zip Code</string>
    <string name="ex_1216_2020_5400">Ex:1216,2020,5400</string>
    <string name="next">Next</string>
    <string name="street_address">Street Address</string>
    <string name="todo">TODO</string>
    <string name="what_amenities_do_you_offer">What amenities do you offer?</string>
    <string name="pets">Pets</string>
    <string name="hairdryer">HairDryer</string>
    <string name="kitchen">Kitchen</string>
    <string name="ac">AC</string>
    <string name="fire_extinguisher">Fire Extinguisher</string>
    <string name="gym">Gym</string>
    <string name="desk_workspace">Desk/Workspace</string>
    <string name="first_aid_kit">First Aid Kit</string>
    <string name="laundry">Laundry</string>
    <string name="breakfast">Breakfast</string>
    <string name="tv">TV</string>
    <string name="finish">Finish</string>
    <string name="wifi">Wifi</string>
    <string name="toiletries">Toiletries</string>
    <string name="parking">Parking</string>
    <string name="lift">Lift</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_of_bathroom">No. of Bathroom</string>
    <string name="is_the_bathroom_private">Is the bathroom private?</string>
    <string name="step_2_start_with_the_basic">STEP 2 : Start with the basic</string>
    <string name="what_kind_of_place_are_you_listing">What kind of place are you listing?</string>
    <string name="types_of_accomodation">Types of Accommodation</string>
    <string name="what_will_guest_have">What will guest have?</string>
    <string name="no_of_bedroom">No. of Bedroom</string>
    <string name="House_Title">House Title</string>

    <string name="step_1">STEP 1</string>
    <string name="what_kind_of_place_do_you_have">What Kind of Place Do You Have?</string>
    <string name="location">Location</string>
    <string name="how_many_guest_can_you_accomodated">HOW MANY GUEST CAN YOU ACCOMODATED?</string>
    <string name="how_many_guest_can_you_accomodate">HOW MANY GUEST CAN YOU ACCOMODATE?</string>
    <string name="no_of_guest">No of guest</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home_page__map">Map</string>
    <string name="nationality">Nationality</string>
    <string name="full_name">Full Name</string>
    <string name="house_title">House Title</string>
    ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc

</resources>
